fix: removed useless margins already covered by padding

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,6 @@ h1 {
      width: 200px;
      justify-content: center;
      height: auto;
-     margin-top: 10px;
-     margin-bottom: 10px;
 
 };
 .box__text {
